--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,13 +33,10 @@ jobs:
               run: npm ci
 
             - name: Run linter
-              run: npm run lint-all
+              run: npm run lint
 
             - name: Run tests
               run: npm test
-
-            - name: Generate types
-              run: npm run generate-types
 
     coverage:
         name: Code Coverage
