--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
               run: npm ci
 
             - name: Run linter
-              run: npm run lint
+              run: npm run lint-test
 
             - name: Run tests
               run: npm test
