--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,9 @@ jobs:
             - name: Install dependencies
               run: npm ci
 
+            - name: Generate TypeScript types
+              run: npm run generate-types
+
             - name: Publish to npm
               run: npm publish --access public
               env:
