--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
     push:
-        branches: [master, main]
+        branches: [master]
     pull_request:
-        branches: [master, main]
+        branches: [master]
 
 jobs:
     test:
@@ -38,30 +38,9 @@ jobs:
             - name: Run tests
               run: npm test
 
-    coverage:
-        name: Code Coverage
-        runs-on: ubuntu-latest
-
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "20.x"
-                  cache: "npm"
-
-            - name: Install dependencies
-              run: npm ci
-
-            - name: Run tests with coverage
-              run: npm run test:coverage
-              continue-on-error: true
-
     publish:
         name: Publish to npm
-        needs: [test, coverage]
+        needs: [test]
         runs-on: ubuntu-latest
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
 
